Fix scrolling for non-wrapping langs
2D langs like ><> and Hexagony, and Assembly shouldn't wrap, instead the
editor should scroll horizontally on long lines. This was broken in the
recent refactor of the editor css/html. This commit fixes that.

--- a/css/hole.css
+++ b/css/hole.css
@@ -59,12 +59,13 @@ main .info {
     > div {
         display: flex;
         flex-direction: column;
+        overflow: auto;
 
         > div {
             border: 1px solid var(--color);
             border-top-width: 2px;
             flex: 1;
-            overflow: hidden auto;
+            overflow: auto;
         }
 
         > header {
